# fruitshop

./: .gitignore  Dockerfile  Makefile  celerybeat-schedule  celerybeat-schedule.db  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.dev.sh  pyproject.toml  requirements.txt
_supervisor/: conf.d
config/: __init__.py  asgi.py  celery.py  celeryconfig.py  settings.py  urls.py
nginx/: Dockerfile  nginx copy.conf  nginx.conf
src/fruitshop_app/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  tasks.py  urls.py  views.py
src/fruitshop_app/management/commands/: initial_script.py
src/fruitshop_app/migrations/: 0001_initial.py  0002_commodity_raw_title.py  0003_account.py  0004_delete_customuser.py  0005_rename_tradeoperations_tradeoperation.py  0006_alter_commodity_quantity_and_more.py  0007_alter_message_message_data_time.py  0008_downloadstatistics.py
src/fruitshop_app/templates/fruitshop_app/: main.html  print_test.html
src/fruitshop_app/templates/templates_for_pdf/: receipt_template.html
