[tool.poetry]
name = "fruitshop"
version = "0.1.0"
description = ""
authors = ["thelonggoodbuy <thelonggoodbuy1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
django = "^4.2.7"
channels = {extras = ["daphne"], version = "^4.0.0"}
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
