[tool.poetry]
name = "fruitshop"
version = "0.1.0"
description = ""
authors = ["thelonggoodbuy <thelonggoodbuy1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
django = "^4.2.7"
channels = {extras = ["daphne"], version = "^4.0.0"}
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
celery = {extras = ["redis"], version = "^5.3.4"}
channels-redis = "^4.1.0"
django-debug-toolbar = "^4.2.0"
django-celery-beat = "^2.5.0"
faker = "^20.1.0"
httpx = "^0.25.1"
pdfkit = "^1.0.0"
wkhtmltopdf = "^0.2"
pytz = "^2023.3.post1"
uvicorn = "^0.24.0.post1"
supervisor = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
